...

  final FetchData? fetchData;
  final String sClientId;

  const NewOrderPage(
    {
      super.key = const Key('new_order_page'),
      this.fetchData,
      required this.sClientId
    }
  );

  @override
...
        elevation: 0.0
      ),
      body: bIsLoading ? Center(
        child: CircularProgressIndicator( color: ColorsApp.primaryColor )
      ) : lProductsGroups.isEmpty ? Center(
        child: PoppinsText(
          sText: TextsUtil.of(context)?.getText( 'new_order.empty_state' ) ?? 'No Products Available',
          dFontSize: ResponsiveApp.dSize( 16.0 ),
          colorText: ColorsApp.textColor
        )
      ) : Column(
        children: [
          Expanded(
...
