...
import 'orders_pages/orders_page.dart';
import 'visits_pages/visits_page.dart';
import 'clients_pages/clients_page.dart';

class HomePage extends StatefulWidget {
  
  const HomePage( { super.key = const Key('home_page') } );

  @override
  State<HomePage> createState() => _HomePageState();
  
}

...
            icon: Icon( Icons.person_outline, color: ColorsApp.textColor, size: ResponsiveApp.dSize( 24.0 ) ),
            label: TextsUtil.of(context)?.getText( 'tabs.clients' ) ?? 'Clients'
          ),
          NavigationDestination(
            selectedIcon: Icon( Icons.groups_outlined, color: ColorsApp.secondaryTextColor, size: ResponsiveApp.dSize( 24.0 ) ),
            icon: Icon( Icons.groups_outlined, color: ColorsApp.textColor, size: ResponsiveApp.dSize( 24.0 ) ),
            label: TextsUtil.of(context)?.getText( 'tabs.visits' ) ?? 'Visits'
          )
        ]
      ),
      body: lPages.elementAt( iIndexNavigation )
    );
  }
...
