...
  }

  @override
  Widget build( BuildContext context ) {

    return Scaffold(
      key: const Key('visit_detail_page'),
      appBar: AppBar(
        title: PoppinsText(
          sText: (TextsUtil.of(context) ?? Provider.of<TextsUtil>(context, listen: false)).formatLocalizedDate(
            context,
            DateFormat( "yyyy-MM-dd" ).format( DateFormat( "dd-MM-yyyy" ).parse( widget.oVisit.sDate ) )
          ),
...
